small upd player and admnin panel

--- a/src/app/styles/components/admin-categry.scss
+++ b/src/app/styles/components/admin-categry.scss
@@ -5,6 +5,12 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
+.category-list-container
+{
+  margin-top: 120px;
+  margin-left: -20px;
+}
+
 .admin-category-title {
   font-size: 28px;
   margin-bottom: 20px;
