--- a/src/app/styles/components/profile-collection-old.scss
+++ b/src/app/styles/components/profile-collection-old.scss
@@ -4,6 +4,7 @@
   background-color: #0d0d0d;
   padding: 2rem 3rem;
   overflow: hidden; // отключает прокрутку
+  margin-top: 93px;
 
 
   .center-coming-soon {
